# eswc-2025-poster-algebra-implementation

./: .gitignore  Cargo.toml  LICENSE  README.md  normalizer.py  requirements.txt
engine/src/: index.js  translator.js  types.js  utils.js
engine/src/operator/: binaryOperator.js  fragmentOperator.js  operatormanager.js  projectOperator.js  renameOperator.js  sourceOperator.js  targetOperator.js
engine/test/: rml_tests.js
engine/test/rml-mapper-test-cases-csv/: README.md
operator/: Cargo.toml
plan/src/: lib.rs
plan/src/states/: join.rs  serialized.rs
rmlweaver-js/: package.json
rmlweaver-js/src/: executor.js
rmlweaver-js/src/operator/: Operator.js  extendOperator.js  joinOperator.js  mergeUnionOperator.js  serializerOperator.js  unionOperator.js
rmlweaver-js/test/: CSV tests feedback.md  Test_notes.md  rml_tests.js  test_functions.js
rust-translator/: Cargo.toml
rust-translator/plan/: Cargo.toml
rust-translator/translator/: Cargo.toml
translator/: Cargo.toml  all_constant_expand.ttl  duplicate_tm_multi_pom.ttl  multi_pom_to_singleton.ttl  push_graph_map.ttl  ref_obj_map_replace.ttl  run.sh  sm_class_constant_expand.ttl
translator/src/: io.rs  lib.rs  normalizer.rs
translator/src/error/: fromfile.rs  mod.rs  oxigraph.rs
translator/src/translator/: mod.rs
translator/src/translator/extend_creation/: mod.rs
translator/src/translator/source_creation/: mod.rs  util.rs
translator/test-resources/: all_constant_expand.ttl  duplicate_tm_multi_pom.ttl  duplicate_tm_single_graph.ttl  multi_pom_to_singleton.ttl  normalized.ttl  output.ttl  ref_obj_map_replace.ttl  sample_mapping.ttl  sm_class_constant_expand.ttl
vocab/src/: d2rq.rs  query.rs  r2rml.rs  rml.rs  rml_core.rs  rml_io.rs  rmls.rs
(+361 files in other folders)
