[package]
name = "eswc_2025"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["operator", "vocab", "plan", "translator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = "1.0.99"
thiserror = "1.0.44"
log4rs = "1.2.0"
log = "0.4.21"
either = "1.10.0"
uuid = { version = "1.3.0", features = ["v4"] }
clap = { version = "4.3.12", features = ["derive"] }


[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true

csv = "1.2.2"
urlencoding = "2.1.2"
walkdir = "2.4.0"
colored = "2.0.4"
log4rs.workspace = true
log.workspace = true
jni = { version = "0.21.1", optional = true }
neon = { version = "1.0.0", optional = true }
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
