[package]
name = "translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = "0.9.0"
oxigraph = {version = "0.4.8", default-features = false}

vocab = { path = "../vocab/" }
operator = { path = "../operator/" }
plangenerator = { path = "../plan/" }


either.workspace = true
anyhow.workspace = true
uuid.workspace = true
regex.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
log.workspace = true
